--- a/html/programmation.html
+++ b/html/programmation.html
@@ -60,19 +60,17 @@
     <!--++++++++++++++++++++++++++++++++    MAIN            ++++++++++++++++++++++++++++++++-->
     <main>
         <section class="artistes">
-<<<<<<< HEAD
             <article class="date">
                 <a href="#" data-anim="1">Vendredi 31 Mai</a>
                 <a href="#" data-anim="2">Samedi 1er Juin</a>
                 <a href="#" data-anim="3">Dimanche 2 Juin</a>
-=======
             <article>
                 <a href="">Vendredi 31 Mai</a>
                 <a href="">Samedi 1er Juin</a>
                 <a href="">Dimanche 2 Juin</a>
             </article>
             <h1>LES ARTISTES</h1>
-            <article>
+            <!-- <article>
                 <div class="circle"><img src="/img/artistes/burna boy.webp" alt="burna_boy_photo"></div>
                 <div class="circle"> <img src="/img/artistes/Ninho.jpg" alt="ninho_photo"></div>
                 <div class="circle"><img src="/img/artistes/hamza.webp" alt="hamza_photo"></div>
@@ -81,8 +79,7 @@
                 <div class="circle"><img src="/img/artistes/meryl.png" alt="photo_meryl"></div>
                 <div class="circle"><img src="/img/artistes/Sherelle.jpg" alt="photo_sherelle"></div>
                 <div class="circle"><img src="/img/artistes/Paris Texas.jpg" alt="photo_paris_texas"></div>
->>>>>>> 248e1938f5667f45d9352ca8d49e700c9a93a3a7
-            </article>
+            </article> -->
             <h2>LES ARTISTES</h2>
             <div class="artistes__container">
 
