--- a/index.html
+++ b/index.html
@@ -98,9 +98,54 @@
         </section>
         <section class="infos_pratiques">
             <h2>INFOS PRATIQUES</h2>
-            <article>LIEU & HORAIRES</article>
-            <article>VENIR AU FESTIVAL</article>
-            <article>ECO CONSIGNES</article> 
+            <article>
+                <h3>LIEU & HORAIRES</h3>
+                <div> 
+                    <p>LIEU : LE BOIS DE VINCENNES</p>
+                    <p>Plaine de la Belle Etoile</p>
+                    <p>Accès par la Route Dauphiné via</p>
+                    <p>L’Esplanade Saint Louis</p>
+                    <p>Bois de Vincennes, 75012 Paris</p>
+                    <br>
+                    <p>HORAIRES : 31 MAI, 1er & 2 JUIN 2024</p>
+                    <p>Vendredi : 17h30 – 01h00</p>
+                    <p>Samedi : 14h00 – 01h00</p>
+                    <p>Dimanche : 14h00 – 00h00</p></div>
+                <figure><img src="/img/accueil/scene.jpeg" alt="Photo de la scène de We love Green"></figure>
+               
+            </article>
+            <article>
+                <h3>VENIR AU FESTIVAL</h3>
+                <dl>
+                    <dt>EN TRANSPORT EN COMMUN</dt>
+                    <dd>Métro: Ligne 1 – Château de Vincennes</dd>
+                    <p>Les horaires des derniers métro au départ de Château de Vincennes ci-dessous :
+                        Vendredi 31 Mai : 1h39
+                        Samedi 1er Juin : 1h39
+                        Dimanche 2 Juin : 00h39</p>
+                    <dd>RER: A – Château de Vincennes</dd>
+                    <dd>Bus: Ligne 56 (Barbès, Gare de l’Est, République, Oberkampf, Nation, Château de Vincennes)</dd>
+                    <dd>Noctilien: Ligne N11 et N33</dd>
+
+                    <dt>EN TRAIN</dt>
+                    <dd>Ne partez pas à la dernière minute et réservez dès maintenant votre week-end prolongé pour venir à WE LOVE GREEN en train TGV Inoui et Intercités Marseille à partir de 39€, Bordeaux à partir de 35€, Lyon à partir de 29€, Nantes à partir de 29€, Lille à partir de 20€, Toulouse à partir de 50€, Strasbourg à partir de 55€, Bruxelles à partir de 37€…</dd>
+                </dl> 
+                <figure><img src="/img/accueil/map.png" alt="Carte pour venir au festival"></figure>  
+            </article>
+            <article>
+                <h3>ECO CONSIGNES</h3>
+                <dl>
+                    <dt>NE JETTEZ RIEN AU SOL, RESPECTEZ L’ENVIRONNEMENT</dt>
+                    <dd>Ne jetez pas vos déchets, mégots, bouteilles au sol… Placez les dans les poubelles mises à votre disposition autour du site du festival.</dd>
+                    
+                    <dt>UTILISEZ LES BONS FLUX</dt>
+                    <dd>Nous vous prions de jeter vos déchets dans les bons flux, expliqués sur chaque poubelles du festival. En 2022 nous avons réussi à recycler 120,5 tonnes de déchets sur le festival.</dd>
+                </dl>
+            </article> 
+            <article>
+                <h2>OBJETS INTERDIT</h2>
+                <figure><img src="/img/accueil/objets-interdit.png" alt="Listes des objets interdits"></figure>
+            </article>
         </section>
     </main>
     <!--++++++++++++++++++++++++++++++++ FIN MAIN ++++++++++++++++++++++++++++++++-->
