--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
     <main>
         <section class="artiste">
             <article>
-                <div><span>SZA</span></div>
                 <div><span>BURNA BOY</span></div>
+                <div><span>JUSTICE</span></div>
             </article>
             <article>
                 <figure>
