--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <img src="./img/accueil/burna.png" alt="Photo de l'artiste Burna Boy avec un fond ">
                 </figure>
                 <figure>
-                    <img src="./img/accueil/justice.jpg" alt="">
+                    <img src="./img/accueil/justice.jpg" alt="Photo du duo Justice">
                 </figure>
                 <h2>ET BIEN D'AUTRES</h2>
             </article>
