--- a/index.html
+++ b/index.html
@@ -71,8 +71,20 @@
     <main>
         <section class="artiste">
             <article>
-                <div><span>BURNA BOY</span></div>
-                <div><span>JUSTICE</span></div>
+                <div>
+                    <span>SZA</span>
+                    <span>BURNA BOY</span>
+                    <span>JUSTICE</span>
+                    <span>PEGGY GOU</span>
+                    <span>KAYTRANADA</span>
+                </div>
+                <div>
+                    <span>FOUR TET</span>
+                    <span>SHAY</span>
+                    <span>CHASE & STATUS DJ</span>
+                    <span>JOSMAN</span>
+                    <span>KIM GORDON</span>
+                </div>
             </article>
             <article>
                 <figure>
@@ -112,7 +124,7 @@
                     <p>Vendredi : 17h30 – 01h00</p>
                     <p>Samedi : 14h00 – 01h00</p>
                     <p>Dimanche : 14h00 – 00h00</p></div>
-                <figure><img src="/img/accueil/scene.jpeg" alt="Photo de la scène de We love Green"></figure>
+                <figure><img src="./img/accueil/scene.jpeg" alt="Photo de la scène de We love Green"></figure>
                
             </article>
             <article>
@@ -135,7 +147,7 @@
                     <br>
                     <dd>Ne partez pas à la dernière minute et réservez dès maintenant votre week-end prolongé pour venir à WE LOVE GREEN en train TGV Inoui et Intercités Marseille à partir de 39€, Bordeaux à partir de 35€, Lyon à partir de 29€, Nantes à partir de 29€, Lille à partir de 20€, Toulouse à partir de 50€, Strasbourg à partir de 55€, Bruxelles à partir de 37€…</dd>
                 </dl> 
-                <figure><img src="/img/accueil/map.png" alt="Carte pour venir au festival"></figure>  
+                <figure><img src="./img/accueil/map.png" alt="Carte pour venir au festival"></figure>  
             </article>
             <article>
                 <h3>ECO CONSIGNES</h3>
@@ -152,7 +164,7 @@
             </article> 
             <article>
                 <h2>OBJETS INTERDIT</h2>
-                <figure><img src="/img/accueil/objets-interdit.png" alt="Listes des objets interdits"></figure>
+                <figure><img src="./img/accueil/objets-interdit.png" alt="Listes des objets interdits"></figure>
             </article>
         </section>
     </main>
