page final billetterie

--- a/html/billeterie.html
+++ b/html/billeterie.html
@@ -144,12 +144,12 @@
                     <div class="card epuise">
                         <h4>EARLY</h4>
                         <h4>65€</h4>
-                        <button class="boutton_epuise">RESERVER</button>
+                        <button class="boutton_epuise">ÉPUISÉ</button>
                     </div>
-                    <div class="card">
+                    <div class="card epuise">
                         <h4>REGULAR</h4>
                         <h4>75€</h4>
-                        <button class="boutton_epuise">RESERVER</button>
+                        <button class="boutton_epuise">ÉPUISÉ</button>
                     </div>
                     <div class="card">
                         <h4>HURRY UP</h4>
@@ -169,10 +169,10 @@
                     les concerts de La Prairie, la scène principale du festival
                 </p>
                 <article>
-                    <div class="card">
+                    <div class="card epuise">
                         <h4>EARLY</h4>
                         <h4>99€</h4>
-                        <button class="boutton_vert">RESERVER</button>
+                        <button class="boutton_epuise">ÉPUISÉ</button>
                     </div>
                     <div class="card">
                         <h4>NICE PRICE</h4>
@@ -185,15 +185,15 @@
             <section class="pass_jour">
                 <h2>PASS 2 JOUR</h2>
                 <article>
-                    <div class="card">
+                    <div class="card epuise">
                         <h4>EARLY</h4>
                         <h4>109€</h4>
-                        <button class="boutton_vert">RESERVER</button>
+                        <button class="boutton_epuise">ÉPUISÉ</button>
                     </div>
                     <div class="card">
                         <h4>REGULAR</h4>
                         <h4>129€</h4>
-                        <button class="boutton_vert">RESERVER</button>
+                        <button class="boutton_epuise">ÉPUISÉ</button>
                     </div>
                     <div class="card">
                         <h4>HURRY UP</h4>
@@ -228,13 +228,13 @@
                         <h4>79€</h4>
                         <button class="boutton_vert">RESERVER</button>
                     </div>
-                    <div class="card">
+                    <div class="card epuise">
                         <h4>
                             ETUDIANTS <br />
                             DEMANDEURS D'EMPLOI
                         </h4>
                         <h4>54€</h4>
-                        <button class="boutton_vert">RESERVER</button>
+                        <button class="boutton_epuise">ÉPUISÉ</button>
                     </div>
                 </article>
             </section>
