scale des images

--- a/html/programmation.html
+++ b/html/programmation.html
@@ -83,7 +83,7 @@
                         <img src="../img/artistes/hamza.webp" alt="Photo de l'artiste Hamza">
                     </div>
                     <div class="circle">
-                        <img src="../img/artistes/Shay.webp" alt="Photo de l'artiste Shay">
+                        <img class="img_scale" src="../img/artistes/Shay.webp" alt="Photo de l'artiste Shay">
                     </div>
                     <div class="circle">
                         <img src="../img/artistes/Chase & Status.jpg" alt="Photo du duo Chase & Status DJ">
@@ -95,7 +95,7 @@
                         <img src="../img/artistes/Sherelle.jpg" alt="Photo de l'artiste Sherelle">
                     </div>
                     <div class="circle">
-                        <img src="../img/artistes/Paris Texas.jpg" alt="Photo du duo Paris Texas">
+                        <img class="img_scale" src="../img/artistes/Paris Texas.jpg" alt="Photo du duo Paris Texas">
                     </div>
                 </article>
     
@@ -112,7 +112,7 @@
                     </div>
                     <div class="circle">
                         <figure>
-                            <img src="../img/artistes/Josman.jpg" alt="Photo de l'artiste Josman">
+                            <img class="img_scale" src="../img/artistes/Josman.jpg" alt="Photo de l'artiste Josman">
                         </figure>
                     </div>
                     <div class="circle">
@@ -134,13 +134,13 @@
                     </div>
                     <div class="circle">
                         <figure>
-                            <img src="../img/artistes/Rounhaa.webp" alt="Photo de l'artiste Rounhaa">
+                            <img class="img_scale" src="../img/artistes/Rounhaa.webp" alt="Photo de l'artiste Rounhaa">
                            
                         </figure>
                     </div>
                     <div class="circle">
                         <figure>
-                            <img src="../img/artistes/Lala&Ce.webp" alt="Photo de l'artiste Lala&CE">
+                            <img class="img_scale" src="../img/artistes/Lala&Ce.webp" alt="Photo de l'artiste Lala&CE">
                         </figure>
                     </div>
                 </article>
@@ -148,7 +148,7 @@
                 <article data-anim="3">
                     <div class="circle">
                         <figure>
-                            <img src="../img/artistes/SZA.webp" alt="Photo de l'artiste SZA">
+                            <img class="img_scale" src="../img/artistes/SZA.webp" alt="Photo de l'artiste SZA">
                         </figure>
                     </div>
                     <div class="circle">
@@ -168,12 +168,12 @@
                     </div>
                     <div class="circle">
                         <figure>
-                            <img src="../img/artistes/Omar Apollo.webp" alt="Photo de l'artiste Omar Apollo">
+                            <img class="img_scale" src="../img/artistes/Omar Apollo.webp" alt="Photo de l'artiste Omar Apollo">
                         </figure>
                     </div>
                     <div class="circle">
                         <figure>
-                            <img src="../img/artistes/chilly Gonzales.jpg" alt="Photo de l'artiste Chilly Gonzales">
+                            <img class="img_scale" src="../img/artistes/chilly Gonzales.jpg" alt="Photo de l'artiste Chilly Gonzales">
                         </figure>
                     </div>
                     <div class="circle">
@@ -182,7 +182,7 @@
                     </div>
                     <div class="circle">
                         <figure>
-                            <img src="../img/artistes/SKEPTA DJ.jpg" alt="Photo de l'artiste DJ SKEPTA">
+                            <img class="img_scale" src="../img/artistes/SKEPTA DJ.jpg" alt="Photo de l'artiste DJ SKEPTA">
                         </figure>
                     </div>
                 </article>
