--- a/html/billeterie.html
+++ b/html/billeterie.html
@@ -162,11 +162,23 @@
                 <h2>BILLET SUPERGREEN</h2>
                 <p>
                     Avec ce billet vous pouvez accéder à un espace tout confort
-                    pour vivre le moment de la manière la plus agréable possible
-                    : espace à la cool pour chiller, bar privé avec vos boissons
-                    préférées, sélecta food à s’en lécher les doigts, toilettes
+                    pour vivre le
+                </p>    
+                <p> 
+                    moment de la manière la plus agréable possible
+                    : espace à la cool pour chiller,
+                </p>
+                <p>    
+                    bar privé avec vos boissons
+                    préférées, sélecta food à s’en lécher les doigts,
+                </p>
+                <p>    
+                    toilettes
                     réservées, et accès à l’estrade pour une vue imprenable sur
-                    les concerts de La Prairie, la scène principale du festival
+                    les
+                </p>
+                <p>    
+                    concerts de La Prairie, la scène principale du festival.
                 </p>
                 <article>
                     <div class="card epuise">
