--- a/html/programmation.html
+++ b/html/programmation.html
@@ -75,27 +75,35 @@
                 <article data-anim="1">
                     <div class="circle">
                         <img src="../img/artistes/burna boy.webp" alt="Photo de l'artiste Burna Boy">
+                        <p>BURNA BOY</p>
                     </div>
                     <div class="circle">
                         <img src="../img/artistes/Ninho.jpg" alt="Photo de l'artiste Ninho">
+                        <p>NINHO</p>
                     </div>
                     <div class="circle">
                         <img src="../img/artistes/hamza.webp" alt="Photo de l'artiste Hamza">
+                        <p>HAMZA</p>
                     </div>
                     <div class="circle">
                         <img class="img_scale" src="../img/artistes/Shay.webp" alt="Photo de l'artiste Shay">
+                        <P>SHAY</P>
                     </div>
                     <div class="circle">
                         <img src="../img/artistes/Chase & Status.jpg" alt="Photo du duo Chase & Status DJ">
+                        <p>CHASE & STATUS DJ</p>
                     </div>
                     <div class="circle">
                         <img src="../img/artistes/meryl.png" alt="Photo de l'artiste Meryl">
+                        <p>MERYL</p>
                     </div>
                     <div class="circle">
                         <img src="../img/artistes/Sherelle.jpg" alt="Photo de l'artiste Sherelle">
+                        <p>SHERELLE</p>
                     </div>
                     <div class="circle">
                         <img class="img_scale" src="../img/artistes/Paris Texas.jpg" alt="Photo du duo Paris Texas">
+                        <p>PARIS TEXAS</p>
                     </div>
                 </article>
     
