--- a/index.html
+++ b/index.html
@@ -450,6 +450,7 @@
         </footer>
         <!--++++++++++++++++++++++++++++++++ FIN FOOTER ++++++++++++++++++++++++++++++++-->
 
+        <script src="./js/accueil.js"></script>
         <script src="./js/script.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
     </body>
